--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,8 @@
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api" },
-    { "src": "/(.*)", "dest": "/frontend/dist/$1" }
+    { "src": "/(assets|images|favicon)/(.*)", "dest": "/frontend/dist/$1/$2" },
+    { "src": "/(.*\\.(js|css|ico|png|jpg|svg|json))", "dest": "/frontend/dist/$1" },
+    { "src": "/(.*)", "dest": "/frontend/dist/index.html" }
   ]
 } 
